assets/linker/styles/custom.less
@font-face {
    font-family: 'museo';
    src: url('../../fonts/museo/Museo_Slab_500_2-webfont.eot');
    src: url('../../fonts/museo/Museo_Slab_500_2-webfont.eot?#iefix') format('embedded-opentype'),
         url('../../fonts/museo/Museo_Slab_500_2-webfont.woff') format('woff'),
         url('../../fonts/museo/Museo_Slab_500_2-webfont.ttf') format('truetype'),
         url('../../fonts/museo/Museo_Slab_500_2-webfont.svg#museo_slab500') format('svg');
    font-weight: normal;
    font-style: normal;
}

@font-face {
  font-family: 'mel';
  src: url('../../fonts/melbourne/melbourne.otf');
  font-weight: normal;
  font-style: normal;
}

html, body {
	font-size: 15px;
	height: 100%;
  margin: none;
  padding: none;
  width: 100%;
}

body {
  font-family: 'Source Sans Pro';
  font-size: 1.1em;
  background: url("../../images/cream-tile.png") repeat;
  color: #4B3F3F;
  text-rendering: optimizeLegibility;
  min-width: 320px;
}

.masthead.segment {
      background-image: url(../../images/cafe.jpg);
    -webkit-background-size: cover;
  background-size: cover;
  -webkit-box-shadow: 0 -20px 10px 0 rgba(0, 0, 0, 0.1) inset !important;
  box-shadow: 0 -20px 10px 0 rgba(0, 0, 0, 0.1) inset !important;
  height: 500px;
}

.roomy-button {
  margin-left:10px;
  margin-right:10px;
  font-size: 1.15em;
}

.jumbotron {
  text-align: center;
}

.jumbotron h2 {
  font-size: 1.5em;
  margin-bottom: 30px;
  text-align: center;
  font-weight: normal;
  color: gray;
}

.container {
  font-family: 'Source Sans Pro';
  font-size: 1.1em;
}

.title {
  text-align: center;
  font-family: 'Source Sans Pro';
  margin-bottom: 30px;
}

.spaced-table td, .spaced-table th {
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 15px;
  padding-right: 15px;
}

.stuck-leftbar {
  top: 55px;
  position: fixed;
}

.stuck-topbar {
  top: 0px;
  position: fixed;
  width: 100%;
  left: 0;
  z-index: 25
}

.sticky-topbar b, .sticky-topbar a, .sticky-topbar span, .sticky-topbar .button {
  font-size: 1.0em;
}

.sticky-leftbar a {
  font-size: 0.85rem!important;
}

.ui.button.change.active {
  background-color: #5BBD72!important;
  color: #FFF!important;
}

.item_name {
  color: #F05940;
}

#quantity-box {
  width: 100px;
  float: right;
}

.dark-brown {
  background-color: #39342e !important;
  color: #FFFFFF !important;
}

.light-brown {
  background-color: #562D0F!important;
  color: #FFFFFF !important;
}

.home-button {
  background-color: #413c35;
  color: #f8f5ec;
  text-decoration: none;
  font-size: 2em;
  border-radius: 25px;
  padding: 15px;
}

.warning-border {
  border-left: 5px solid #E75859;
  padding-left: 10px;
}

.instruction-left {
  border-left: 4px solid #F05940;
  padding-left: 10px;
}

.down-divider {
  background: url("../../images/divider-down.png") repeat;
  width: 100%;
  left: 0;
  height: 11px;
  bottom: -11px;
  position: absolute;
}

.step-up-divider {
  background: url("../../images/divider-up.png") repeat;
  width: 100%;
  left: 0;
  height: 11px;
  position: absolute;
  z-index: 1;
}

.navbar-item {
  font-family: 'mel';
  font-size: 1.75em;
  color: #39342e;
  text-decoration: none;
}

.navbar-item:hover {
  border-bottom: 3px solid #39342e;
  color: #F05940;
  text-decoration: none;
}

#footer {
  box-shadow: 0px -1px 3px #313131;
}
#home-section1 {
  width: 100%;
  height: 550px;
  background: url("../../images/pastries-light.png");
  background-repeat: no-repeat;
  background-size: cover;
}

.coffee-tile {
  background: url("../../images/coffee-tile.jpg") repeat;
}

#main-section1 {
  width: 100%;
  height: 550px;
  background: url("../../images/outside_cafe.png");
  background-repeat: no-repeat;
  background-size: cover;
}

#catering-section1 {
  width: 100%;
  height: 550px;
  background: url("../../images/baltimore.png");
  background-repeat: no-repeat;
  background-size: cover;
}

#welcome {
  width: 100%;
  background: url("../../images/cream-tile.png") repeat;
  height: 500px;
  padding-top: 30px;
  padding-bottom: 30px;
  box-shadow: 5px 2px 10px 10px #313131;
  z-index: 0;
}

#catering-how-it-works {
  width: 100%;
  background: url("../../images/cream-tile.png") repeat;
  height: 500px;
  padding-top: 30px;
  padding-bottom: 30px;
  box-shadow: 0px -6px 3px 3px #606060;
  z-index: 0;
}

#reviews {
  width: 100%;
  height: 650px;
padding-top: 30px;
padding-bottom: 30px;
background-color: #fff;
background: url("../../images/cream-tile.png") repeat;
}

#feedback {
  width: 100%;
  height: 500px;
  padding-top: 30px;
  padding-bottom: 30px;
}

#express-bg-map {
  width: 100%;
  height: 550px;
  z-index: 0;
  background: url("../../images/outside_cafe.png");
  background-repeat: no-repeat;
  background-size: cover;
}

#section-2 {
  width: 100%;
  height: 400px;
  background: url("../../images/cream-tile.png") repeat;
}

#main-hours-section {
  padding-top: 30px;
  padding-bottom: 30px;
  position: relative;
  width: 100%;
  height: 900px;
  background: url("../../images/cream-tile.png") repeat;
  box-shadow: 5px 2px 10px 10px #313131;
  z-index: 0;
}

#main-hours-sun {
  position: absolute;
  top: 0;
  right: 0;
}

#cafe-front-section {
  width: 100%;
  height: 300px;
  background-repeat: no-repeat;
  background-size: cover;
  background: url("../../images/cafe_front.png");
}

#main-history-section {
  padding-top: 30px;
  padding-bottom: 30px;
  width: 100%;
  height: 500px;
  background: url("../../images/cream-tile.png") repeat;
  box-shadow: 0px -6px 3px 3px #3E3E3E;
  z-index: 0;
}

.breakfast-specials {
  width: 100%;
   background: url("../../images/coffee-tile.jpg") repeat;
  height: 600px;
}

.lunch-specials {
  width: 100%;
  background: url('../../images/cream-tile.png') repeat;
  height: 1000px;

}

#header-section {
  width:100%;
  height: 55px;
  background-color: #d35400;
  background: url("../../images/cream-tile.png") repeat;
  z-index: 25;
  box-shadow: 0px 8px 8px #313131;
}

#step-section {
  width: 100%;
  height: 130px;
   background: url("../../images/unsplash_macaroons.jpg");
}

#specials-header {
  width: 100%;
  height: 130px;
  background: url("../../images/bean-tile.jpg") repeat;
}

#specials-header h1 {
  color: #fff;
  margin-top: 30px;
  font-size: 3.0em;
}

#login-step-section {
  width: 100%;
  height: 550px;
   background: url("../../images/unsplash_macaroons.jpg");
}

.simpleCart_shelfItem {
  box-shadow: 1px 1px 3px #313131!important;
}

.ui.five.medium.steps {
  box-shadow: 1px 1px 3px #514b4b;
}

#footer {
  padding-top: 10px;
  padding-bottom: 20px;
}

#footer .ui.dividing.header {
  font-family: 'mel';
  font-weight: none;
  padding-top: 12px;
  padding-bottom: 12px;
  color: #F05940;
  border-bottom: 1px solid rgba(255, 255, 255, 0.3)!important;
}

.orange {
  color: #F05940;
}

.bottom-button {
  position: absolute;
  bottom: 0;
  width: 85% !important;
}

.red-dot {
  background: #D93A3A;
  border-radius: 50%;
  display: inline-block;
  height: 10px;
  width: 10px;
  margin-left: 10px;
}

.green-dot {
  background: #5BBD72;
  border-radius: 50%;
  display: inline-block;
  height: 10px;
  width: 10px;
  margin-left: 10px;
}

#city {
  height: 100px;
  margin-bottom: -11px;
  background: url("../../images/city-outline.png");
  background-repeat: no-repeat;
}

#down-arrow {
  font-size: 3em !important;
  opacity: 1.0 !important;
  color: #39342e!important;
}

.animated {
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-iteration-count: infinite;
  animation-iteration-count: infinite;
}

@keyframes bounce {
  0%, 20%, 53%, 80%, 100% {
    -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
    -webkit-transform: translate3d(0,0,0);
    -ms-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0);
  }

  40%, 43% {
    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
    -webkit-transform: translate3d(0, -30px, 0);
    -ms-transform: translate3d(0, -30px, 0);
    transform: translate3d(0, -30px, 0);
  }

  70% {
    -webkit-transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
    transition-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
    -webkit-transform: translate3d(0, -15px, 0);
    -ms-transform: translate3d(0, -15px, 0);
    transform: translate3d(0, -15px, 0);
  }

  90% {
    -webkit-transform: translate3d(0,-4px,0);
    -ms-transform: translate3d(0,-4px,0);
    transform: translate3d(0,-4px,0);
  }
}

.bounce {
  -webkit-animation-name: bounce;
  animation-name: bounce;
  -webkit-transform-origin: center bottom;
  -ms-transform-origin: center bottom;
  transform-origin: center bottom;
}


q:before {
    content: '\201C';
    font-size:150%;
    font-family: Times New Roman;
    padding-right: 5px;
}

q:after {
    content: '\201D';
    font-size:150%;
    line-height: 1.1em;
    padding-left: 5px;
    font-family: Times New Roman;
}


.quote {
    margin-top: -13px;
    height: auto;
    font-size: 1.2em;
    color: #39342e;
    font-family: 'mel';
}

.review {
  position: relative;
  border-left: 2px solid #555;
  padding-left: 10px;
  padding-bottom:20px;
}

.reviewer {
  opacity: 0.8;
  font-size: 1.0em;
  float: right;
}

.below-step {
  box-shadow: 0px -5px 5px #606060;
}

#express-title {
  color: #000;
  width: 70%;
  position: absolute;
  left: 0px;
  top: 150px;
  font-size: 3em;
  background: url("../../images/cream-tile.png") repeat;
  font-family: 'museo';
  box-shadow: 2px 2px 5px #313131;
  padding-left: 30px;
}

.tight {
  margin-top: 0.5rem !important;
  margin-bottom: 0.5rem !important;
}

